styles/_date_options.scss
.dates-title {
  font-family: 'Source Sans Pro', sans-serif;
  text-align: left;
  margin: 2em;
  padding: 1em;
  border: solid;

  .fa {
    margin: 1%;
  }
}
#events-and-options {
  font-family: 'Source Sans Pro', sans-serif;
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-around;

  .options-with-button {
    display: flex;
    float: right;
    flex-direction: column;
    align-items: center;

    .send-dates-button {
      border: none;
      background-color: #e29e21;
      display: flex;
      align-items: center;
      justify-content: center;
      padding-left: 1em;
      padding-right: 1em;
      padding-top: 0.5em;
      padding-bottom: 0.5em;
      font-weight: bold;
      margin-top: 1em;
      margin-bottom: 1em;
      float: right;
    }

    .options-container {
      display: flex;
      align-items: center;
      border: solid;
      width: 20em;
      min-height: 30em;
      justify-content: center;
      flex-direction: column;

      .event-option {
        border: solid;
        width: 90%;
        margin-top: 0.45em;
        margin-bottom: 0.45em;
        display: flex;
        justify-content: flex-start;
        flex-direction: column;
        align-items: center;

        .option-title {
          background-color: $nav-bg-color;
          color: white;
          display: flex;
          align-content: center;
          justify-content: center;
          width: 100%;
        }
        .arrow {
          margin-bottom: 0.45em;
        }
        .option-date {
          font-weight: 600;
        }
      }
    }
  }
}

.calendars {
  display: flex;
  flex-direction: column;

  .start-calendars {
    background: #b1dbc786;
    display: flex;
    flex-direction: column;
    align-content: center;
    padding: 1em;
    padding-right: 3em;
    padding-left: 3em;
    text-align: center;
    margin-bottom: 1em;

    .start-date, .start-time {
      padding: 0.5em;
      border: none;
      margin-bottom: 1em;
    }
  }

  .end-calendars {
    background: #dbbbb186;
    display: flex;
    flex-direction: column;
    align-content: center;
    padding: 1em;
    padding-right: 3em;
    padding-left: 3em;
    text-align: center;
    margin-bottom: 1em;

    .end-date, .end-time {
      padding: 0.5em;
      border: none;
     margin-bottom: 1em;
    }
  }
  .end-date-button {
    border: none;
    background-color: #e29e21;
    display: flex;
    align-items: center;
    justify-content: center;
    padding-left: 0.5em;
    padding-right: 0.5em;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    font-weight: bold;
    margin-top: 0.2em;
    float: right;
  }
}

